kubernetes files/petclinic/strip-prefix-traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-traefik-middleware
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /petclinic
