kubernetes files/petclinic/petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic
  annotations:
#    traefik.ingress.kubernetes.io/router.middlewares: default-strip-prefix-traefik-middleware@kubernetescrd
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
#  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /petclinic
#      - path: /petclinic(/|$)(.*)
        pathType: Prefix
#        pathType: ImplementationSpecific
        backend:
          service:
            name: petclinic-service
            port:
              number: 8080
